fix: fix the center styles and bugs 1. add collapse of the center 2. fix the center deives status number error 3. fix the congestion warning level color

--- a/src/pages/Center/IntersectionMap/components/DeviceOnlineRate/controlRsu.module.less
+++ b/src/pages/Center/IntersectionMap/components/DeviceOnlineRate/controlRsu.module.less
@@ -1,17 +1,17 @@
 .control-content {
-  margin-top: 5px;
-  padding: 15px;
-  background-color: #39546f80;
   color: white;
 
   .control-title {
     font-size: 16px;
-    margin-bottom: 10px;
   }
 
   :global {
     .ant-select-selector {
       background-color: #39546f80 !important;
+    }
+
+    .ant-select-arrow {
+      color: white;
     }
   }
 }
