--- a/src/pages/Center/IntersectionMap/components/DeviceOnlineRate/controlTable.module.less
+++ b/src/pages/Center/IntersectionMap/components/DeviceOnlineRate/controlTable.module.less
@@ -1,7 +1,4 @@
 .control-table-container {
-  height: 200px;
-  margin-top: 10px;
-
   :global {
     .ant-table {
       background: transparent;
@@ -23,7 +20,7 @@
   }
 
   .control-table-row {
-    background-color: #39546f80;
+    background-color: transparent;
     color: white;
   }
 }
